[package]
name = "ourios-server"
version.workspace = true
description = "Ourios server binary (CLAUDE.md §1, §7). Currently runs the background compaction role (RFC 0009 §3.2) with OTLP metrics + durable audit."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# `publish = false` (all crates are pre-release 0.0.0) otherwise hides the
# binary from cargo-dist; `dist = true` opts this one package back in as the
# sole distributable artifact for `v*` tag releases.
[package.metadata.dist]
dist = true

[[bin]]
name = "ourios-server"
path = "src/main.rs"

[dependencies]
# Miner tunables (RFC 0004), their own crate so config edits recompile narrowly (RFC 0028).
ourios-config = { path = "../ourios-config" }
# The background compaction daemon (RFC 0009 §3.2) + the OTLP receiver
# building blocks (RFC 0003 §6.2): the ingest pipeline, the axum HTTP
# router, and the tonic `LogsService` impl the receiver role serves.
ourios-ingester = { path = "../ourios-ingester", features = ["oidc"] }
# Durable compaction-audit sink (RFC 0005 §3.7) + the compaction policy.
ourios-parquet = { path = "../ourios-parquet" }
# OTel SDK + OTLP push MeterProvider bootstrap (RFC 0001 §6.8).
ourios-telemetry = { path = "../ourios-telemetry" }
# OTel meter API for the querier role's metrics (RFC 0016 §3.6); the SDK
# lives in ourios-telemetry, library code resolves against the global meter.
opentelemetry = { version = "0.32", default-features = false, features = ["metrics"] }
# Generated semantic-convention name constants for the query metrics.
ourios-semconv = { path = "../ourios-semconv" }
# The receiver role's durable WAL + miner + miner config (one pipeline
# over a single `Wal`, RFC 0003 §6.5 / RFC 0008 §3.1).
ourios-wal = { path = "../ourios-wal" }
ourios-miner = { path = "../ourios-miner" }
ourios-core = { path = "../ourios-core", features = ["oidc"] }
# The query engine (RFC 0007) the querier role (RFC 0016) serves: the DSL
# front-ends (`dsl::parse_statement` / `parse_structured_statement`) + the
# `Querier` (`run_query` / `run_drift`). Its types are kept internal — no
# DataFusion/SQL crosses the HTTP boundary (H6 / RFC0016.5-error-model).
ourios-querier = { path = "../ourios-querier" }
# JSON request/response codec for the querier endpoint (RFC 0016 §3.3/§3.4):
# parse the `{"query": …}` wrapper and serialise the Ourios-owned response
# DTOs. The structured-IR JSON body itself is parsed by the querier's own
# `parse_structured_statement`.
serde = { version = "1", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
# CLI argument parsing (`--config <path>`, RFC 0020 §3.2). The ecosystem-standard
# parser; the derive API gives usage/help + edge-case handling (missing value,
# unknown flag, trailing args) for free. Lean feature set — no color/suggestions.
clap = { version = "4", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
# Structured logging front-end (CLAUDE.md §6.3). `ourios-telemetry` bridges
# these events to OTel log records pushed over OTLP (the dogfooding path) and
# mirrors them to stderr; this crate only emits.
tracing = { version = "0.1", default-features = false, features = ["std"] }
# RFC 0020 configuration-file schema (config::file): deserialise the YAML into
# the schema, then substitute `${env:…}` in the typed scalar leaves (schema
# validation runs on the raw text first, so an error never echoes a resolved
# secret — the order is security-relevant, see the module docs).
# `serde_yaml_ng` is the maintained continuation of the abandoned
# `serde_yaml` (same `from_str`/`Error` surface); ourios-querier depends on
# it too. MIT-licensed, so the cargo-deny license allow-list is unchanged.
serde_yaml_ng = { version = "0.10", default-features = false }
# `LogsServiceServer` to host the receiver's `LogsService` impl over gRPC.
opentelemetry-proto = { version = "0.32", default-features = false, features = ["gen-tonic", "logs"] }
# gRPC transport (server) for the OTLP/gRPC listener (RFC0003.16). `gzip`
# so the receiver accepts the OTel Collector's default-gzip OTLP exporter
# (tests/it/collector_interop.rs).
tonic = { version = "0.14", default-features = false, features = ["transport", "router", "tls-connect-info", "gzip"] }
# HTTP transport (serve) for the OTLP/HTTP listener (RFC0003.16); reuses
# the receiver crate's `router`.
axum = { version = "0.8", default-features = false, features = ["tokio", "http1"] }
# Async runtime: `rt-multi-thread` for the compactor's `spawn_blocking`
# sweeps + the receiver listeners, `signal` for SIGINT/SIGTERM graceful
# shutdown, `net`/`sync` for the listeners + shutdown fan-out, `macros`
# for `#[tokio::main]`.
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "signal", "net", "sync"] }
# The MCP query surface (RFC 0027): the official Rust SDK, server side +
# streamable HTTP only (no client, no stdio). Lives in this crate alone —
# no new crate (§3.1).
rmcp = { version = "2.1.0", default-features = false, features = ["macros", "server", "transport-streamable-http-server"] }
schemars = { version = "1.2.1", default-features = false, features = ["derive"] }

[dev-dependencies]
# RFC 0030 test CAs / leaf certs, minted at test time — no committed
# key material (the RFC 0029 house rule).
rcgen = { version = "=0.14.8", default-features = false, features = ["pem", "crypto", "ring"] }
# RFC 0020 env-substitution resolver property tests (config::env_subst): the
# OTel Config WG vector table + invariants (escape round-trip, non-recursion).
proptest = "=1.11.0"
# RFC0003.16 served-binary integration test: temp dirs, a real tonic
# gRPC client (`channel`) + a hand-rolled HTTP/1.1 POST (tokio io/time),
# prost to encode the request, the WAL to replay + assert durability.
tempfile = "=3.27.0"
prost = { version = "=0.14.4", default-features = false, features = ["std"] }
tonic = { version = "=0.14.6", default-features = false, features = ["transport", "channel", "gzip", "tls-ring"] }
tokio = { version = "=1.53.0", default-features = false, features = ["io-util", "time", "process"] }
# Drive the querier `Router` in-process (`ServiceExt::oneshot`) for the
# RFC 0016 handler tests — no socket, no HTTP client (the ingester's pattern).
tower = { version = "=0.5.3", default-features = false, features = ["util"] }
# In-memory metric exporter for the RFC0016.6 query-metrics test: install a
# global meter provider and read the exported stream (the ingester pattern).
ourios-telemetry = { path = "../ourios-telemetry", features = ["testing"] }
opentelemetry_sdk = { version = "=0.32.1", default-features = false, features = ["metrics", "trace", "testing"] }
# RFC0038.1 request-span tests: capture the query/MCP spans on a scoped
# `InMemorySpanExporter` (no process-global tracer), matching the ingester's
# slice-2 pattern. `opentelemetry` `trace` supplies `SpanKind`/`TracerProvider`.
opentelemetry = { version = "0.32", default-features = false, features = ["trace"] }
tracing-opentelemetry = { version = "0.33", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }
# RFC 0019 server-level S3 integration tests (rfc0019_storage_backend): spin
# LocalStack (S3-compatible, Apache-2.0) via testcontainers, spawn the server
# pointed at it through the endpoint override, and assert bucket contents via a
# `Store::s3`. `#[ignore]`d — run only by the `s3-integration` CI job (Docker +
# AWS_* env); the default `cargo test` compiles but skips them.
testcontainers-modules = { version = "=0.15.0", features = ["localstack"] }
# RFC 0029 §5 served arms: a loopback fixture issuer (axum, already a lib
# dep) plus ES256 minting — the same runtime-generated-key policy as the
# ourios-core fixture (no committed private keys).
jsonwebtoken = { version = "=10.4.0", default-features = false, features = ["rust_crypto", "use_pem"] }
# RFC0032.4: harvest the writer's actual bloom-filtered column set from a
# real Parquet footer, so the MCP cost-model resource is pinned to the
# writer rather than to repeated literals. Already in the tree via
# ourios-parquet — no new compilation unit versions.
parquet = { version = "=58.3.0", default-features = false, features = ["arrow", "zstd"] }
bytes = { version = "=1.12.1", default-features = false }
# The RFC0029.7 Dex arm mints real tokens (form POST to the container's
# token endpoint) and polls readiness — same crate + TLS stack as the
# verifier itself.
reqwest = { version = "=0.12.28", default-features = false, features = ["rustls-tls", "json"] }
p256 = { version = "=0.13.2", default-features = false, features = ["ecdsa", "pkcs8", "pem", "arithmetic"] }
rand = "=0.8.7"
base64 = "=0.22.1"

[lints]
workspace = true
