[package]
name = "ourios-testgen"
version.workspace = true
description = "Dev-only OTLP-envelope generators for Ourios property suites (RFC 0024)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
ourios-core = { path = "../ourios-core" }
# The crate's raison d'être — `proptest` strategies over
# `OtlpLogRecord` (RFC 0024 §3.2). A *regular* dependency here is the
# point of the crate: consumers take `ourios-testgen` as a
# dev-dependency, so no production crate's graph grows `proptest`.
proptest = "=1.11.0"
# Calibration-manifest (de)serialization (RFC 0024 §3.1) — the
# workspace-default serialization stack (same pins as ourios-core).
serde = { version = "1", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }

[lints]
workspace = true
