[package]
name = "ourios-wal"
version.workspace = true
description = "RFC 0008 write-ahead log — durable append-only buffer between the OTLP receiver and the Parquet writer."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "ourios_wal"
path = "src/lib.rs"

# Crash-recovery test fixture spawned (and SIGKILL'd) by
# tests/rfc0008_2_crash_recovery.rs. Not a product binary — the
# crate is `#![deny(unsafe_code)]`, so a real `fork()` harness is
# out, and a child process driven by `Child::kill()` is the
# no-`unsafe` way to exercise a true process death. Kept under
# tests/ to mark it a fixture; `publish = false` keeps it out of
# any release.
[[bin]]
name = "wal_crash_fixture"
path = "tests/fixtures/wal_crash_fixture.rs"
test = false
bench = false
doctest = false

[dependencies]
# UUIDv7 for segment filenames + checkpoint sidecar payload
# (RFC 0008 §6.2 / §6.7). UUIDv7's chronological sort gives
# `WalOffset`'s global monotonicity (§6.1) without a synthetic
# counter, which is how the checkpoint survives housekeeping
# deletion of older segments.
uuid = { version = "1", default-features = false, features = ["v7", "std"] }
# CRC32-C (Castagnoli, polynomial `0x1EDC6F41`) per RFC 0008
# §6.2.2. Same polynomial the Parquet writer already uses on
# row groups; one implementation, one SIMD-acceleration path
# on modern x86 / aarch64.
crc32c = "0.6"
# `AuditEvent` shape (RFC 0001 §6.4) for `FrameKind::AuditEvent`
# payloads — the audit-event-through-WAL contract RFC 0005 §3.7
# defers to this RFC (§6.4 audit-ordering barrier).
ourios-core = { path = "../ourios-core" }

[features]
# Exposes the crate-internal `frame` module (`read_frame`, `FrameError`)
# for the `fuzz/` cargo-fuzz `wal_frame` target (RFC 0015). Off by
# default; not part of the stable public API.
fuzzing = []

[dev-dependencies]
# Scratch directories for the segment-on-disk tests.
tempfile = "=3.27.0"
# Property test for the RFC0008.9 `wal_unflushed_bytes` bound
# under a randomised frame-arrival pattern.
proptest = "=1.11.0"

[lints]
workspace = true
